[package]
name = "bevy_pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.10", features = ["serialize"]}
bevy_editor_pls = "0.3.1"
rand = "*"
bevy_rapier2d = "*"
belly = {git = "https://github.com/jkb0o/belly.git"}
serde = "*"
bevy_pkv = "*"