[package]
name = "bevy_pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["serialize",
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "ktx2",
  "zstd",
  "vorbis",
  "x11",
  "filesystem_watcher",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
], default_features = false}
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls.git"}
rand = "*"
bevy_rapier2d = "0.22.0"
belly = {git = "https://github.com/jkb0o/belly.git", branch = "bevy-0.11"}
serde = "*"
bevy_pkv = "0.8.0"
bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi.git"}
bevy_kira_audio = {version = "0.16.0", features = ["wav"]}